migrate to g8 src layout