@@ -1,20 +1,11 @@
-lazy val commonSettings = Seq(
-  version := "0.1",
-  organization := "com.github.bartekdobija",
-  scalaVersion := "2.11.8",
-  name := "spark-template"
-)
-
-lazy val sparkVersion = "2.2.0"
-
-lazy val root = (project in file(".")).settings(
-  commonSettings,
-  mainClass in Compile := Some("com.github.bartekdobija.core.Main"),
-  libraryDependencies ++= Seq(
-    "org.scalatest" %% "scalatest" % "3.0.4" % Test,
-
-    "org.apache.spark" %% "spark-core" % sparkVersion % "provided",
-    "org.apache.spark" %% "spark-sql" % sparkVersion % "provided"
+// This build is for this Giter8 template.
+// To test the template run `g8` or `g8Test` from the sbt session.
+// See http://www.foundweekends.org/giter8/testing.html#Using+the+Giter8Plugin for more details.
+lazy val sparkseed = (project in file(".")).
+  settings(
+    test in Test := {
+      val _ = (g8Test in Test).toTask("").value
+    },
+    scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
+    resolvers += Resolver.url("typesafe", url("http://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
   )
-
-)
